# sna-project

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml  rollback.yml
docs/: ARCHITECTURE.md
infra/: deploy.yml
monitoring/grafana/dashboards/: fastapi-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
nginx/: default.conf
src/: main.py  test_main.py
static/: index.html
